[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prompt-toolkit-action-completer"
version = "1.1.1"
description = "A fairly simple method for registering callables as prompt-toolkit completions"
authors = ["Stephen Bunn <stephen@bunn.io>"]
maintainers = []
license = "ISC"
packages = [
    { include = "action_completer", from = "src" }
]
readme = "README.md"
homepage = "https://github.com/stephen-bunn/prompt-toolkit-action-completer"
repository = "https://github.com/stephen-bunn/prompt-toolkit-action-completer"
documentation = "https://prompt-toolkit-action-completer.readthedocs.io"
keywords = [
    "prompt-toolkit",
    "prompt",
    "toolkit",
    "completer",
    "validator",
    "action"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: ISC License (ISCL)"
]
include = [
    "pyproject.toml",
    "LICENSE",
    "README*.rst",
    "README*.md",
    "CHANGELOG.rst",
    "CHANGELOG.md",
    "CONTRIBUTING.rst",
    "CONTRIBUTING.md",
]
exclude = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".readthedocs.yaml",
    "requirements*.txt"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/stephen-bunn/prompt-toolkit-action-completer/issues"

[tool.poetry.dependencies]
python = "^3.7"
prompt-toolkit = "^3.0.7"
attrs = "^21.4.0" # Changed from pinned version to a compatible range
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^24.0"
check-manifest = "^0.48"
colorama = "^0.4.6"
coverage = { version = "^7.2", extras = ["toml"] }
flake8 = "^7.0"
flake8-docstrings = "^1.7"
hypothesis = "^6.80"
invoke = "^2.0"
isort = "^5.12"
mypy = "^1.5"
pre-commit = "^3.3"
pyprof2calltree = { version = "^1.4.5", optional = true }
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-flake8 = "^1.1"
pytest-sugar = "^1.0"
pytest-xdist = "^3.3"
readme-renderer = { version = "^40.0", extras = ["md"] }
rope = "^1.10"
sphinx = "^7.2"
toml = "^0.10.2"
towncrier = "^23.0"
twine = "^5.0"
vprof = { version = "^0.38", optional = true }
sphinx-rtd-theme = "^2.0"
sphinx-autodoc-typehints = "^1.24"
ipdb = "^0.13.13"

[tool.poetry.extras]
profile = ["pyprof2calltree", "vprof"]

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''

[tool.towncrier]
package = "action_completer"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changes/"
title_format = "`{version} <https://github.com/stephen-bunn/prompt-toolkit-action-completer/releases/tag/v{version}>`_ (*{project_date}*)"
issue_format = '`#{issue} <https://github.com/stephen-bunn/prompt-toolkit-action-completer/issues/{issue}>`_'
template = 'tasks/CHANGELOG.rst.jinja2'

[[tool.towncrier.type]]
directory = 'feature'
name = 'Features'
showcontent = true

[[tool.towncrier.type]]
directory = 'bugfix'
name = 'Bug Fixes'
showcontent = true

[[tool.towncrier.type]]
directory = 'doc'
name = 'Documentation'
showcontent = true

[[tool.towncrier.type]]
directory = 'trivial'
name = 'Trivial Changes'
showcontent = false

[[tool.towncrier.type]]
directory = 'misc'
name = 'Miscellaneous'
showcontent = true

[[tool.towncrier.type]]
directory = 'removal'
name = 'Removals'
showcontent = true

[[tool.towncrier.type]]
directory = 'deprecation'
name = 'Deprecations'
showcontent = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rxsX --flake8 -n 4 --cov"
norecursedirs = [
    ".git",
    "_build",
    "dist",
    "changes",
    "tasks",
    "docs"
]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
flake8-ignore = [
    "docs/source/*.py ALL",
    "tests/*.py ALL",
    "setup.py ALL"
]

[tool.coverage.run]
branch = true
parallel = true
disable_warnings = [
    "no-data-collected"
]
source = [
    "src/action_completer/"
]

[tool.coverage.report]
show_missing = true
