[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-toolkit-action-completer"
version = "1.2.1"
description = "A fairly simple method for registering callables as prompt-toolkit completions"
authors = [{ name = "Stephen Bunn", email = "stephen@bunn.io" }]
requires-python = "~=3.12"
readme = "README.md"
license = "ISC"
maintainers = []
keywords = [
    "prompt-toolkit",
    "prompt",
    "toolkit",
    "completer",
    "validator",
    "action",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: ISC License (ISCL)",
]
dependencies = [
    "prompt-toolkit>=3.0.7,<4",
    "attrs>=21.4.0,<22",
    "fuzzywuzzy[speedup]>=0.18.0,<0.19",
    "typing-extensions>=3.7.4",
]

[project.optional-dependencies]
profile = []

[project.urls]
Homepage = "https://github.com/stephen-bunn/prompt-toolkit-action-completer"
Repository = "https://github.com/stephen-bunn/prompt-toolkit-action-completer"
Documentation = "https://prompt-toolkit-action-completer-action-completer.readthedocs.io"
"Bug Tracker" = "https://github.com/stephen-bunn/prompt-toolkit-action-completer/issues"

[dependency-groups]
dev = [
    "black~=24.0",
    "check-manifest>=0.48,<0.49",
    "colorama>=0.4.6,<0.5",
    "coverage[toml]~=7.2",
    "flake8~=7.0",
    "flake8-docstrings~=1.7",
    "hypothesis~=6.80",
    "invoke~=2.0",
    "isort~=5.12",
    "mypy~=1.5",
    "pre-commit~=3.3",
    "pyprof2calltree>=1.4.5,<2",
    "pytest~=8.0",
    "pytest-cov~=4.1",
    "pytest-flake8~=1.1",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.3",
    "readme-renderer[md]~=40.0",
    "rope~=1.10",
    "sphinx~=7.3",
    "toml>=0.10.2,<0.11",
    "towncrier~=23.0",
    "twine~=5.0",
    "vprof>=0.38,<0.39",
    "sphinx-rtd-theme~=2.0",
    "sphinx-autodoc-typehints~=1.24",
    "ipdb>=0.13.13,<0.14",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/action_completer",
    "pyproject.toml",
    "LICENSE",
    "README*.rst",
    "README*.md",
    "CHANGELOG.rst",
    "CHANGELOG.md",
    "CONTRIBUTING.rst",
    "CONTRIBUTING.md",
]
exclude = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".readthedocs.yaml",
    "requirements*.txt",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/action_completer",
    "pyproject.toml",
    "LICENSE",
    "README*.rst",
    "README*.md",
    "CHANGELOG.rst",
    "CHANGELOG.md",
    "CONTRIBUTING.rst",
    "CONTRIBUTING.md",
]
exclude = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    ".readthedocs.yaml",
    "requirements*.txt",
]

[tool.hatch.build.targets.wheel.sources]
"src/action_completer" = "action_completer"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''

[tool.towncrier]
package = "action_completer"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changes/"
title_format = "`{version} <https://github.com/stephen-bunn/prompt-toolkit-action-completer/releases/tag/v{version}>`_ (*{project_date}*)"
issue_format = '`#{issue} <https://github.com/stephen-bunn/prompt-toolkit-action-completer/issues/{issue}>`_'
template = 'tasks/CHANGELOG.rst.jinja2'

[[tool.towncrier.type]]
directory = 'feature'
name = 'Features'
showcontent = true

[[tool.towncrier.type]]
directory = 'bugfix'
name = 'Bug Fixes'
showcontent = true

[[tool.towncrier.type]]
directory = 'doc'
name = 'Documentation'
showcontent = true

[[tool.towncrier.type]]
directory = 'trivial'
name = 'Trivial Changes'
showcontent = false

[[tool.towncrier.type]]
directory = 'misc'
name = 'Miscellaneous'
showcontent = true

[[tool.towncrier.type]]
directory = 'removal'
name = 'Removals'
showcontent = true

[[tool.towncrier.type]]
directory = 'deprecation'
name = 'Deprecations'
showcontent = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rxsX --flake8 -n 4 --cov"
norecursedirs = [
    ".git",
    "_build",
    "dist",
    "changes",
    "tasks",
    "docs"
]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
flake8-ignore = [
    "docs/source/*.py ALL",
    "tests/*.py ALL",
    "setup.py ALL"
]

[tool.coverage.run]
branch = true
parallel = true
disable_warnings = [
    "no-data-collected"
]
source = [
    "src/action_completer/"
]

[tool.coverage.report]
show_missing = true

